--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "canvas-confetti": "^1.9.4",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.26.2",
+    "lucide-react": "^0.564.0",
     "next": "^15.1.4",
     "pino": "^10.3.1",
     "qrcode": "^1.5.4",
