--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pino": "^10.3.1",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
+    "react-doctor": "^0.0.29",
     "react-dom": "^19.0.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
